[workspace]
resolver = "2"
members = [
  "tpt-kinetix-core",
  "tpt-kinetix-demux",
  "tpt-kinetix-h264",
  "tpt-kinetix-av1",
  "tpt-kinetix-kg",
  "tpt-kinetix-mux",
  "tpt-kinetix-pipeline",
  "tpt-kinetix-stream",
  "tpt-kinetix-cli",
  "tpt-kinetix-test-utils",
]
exclude = ["tpt-kinetix-demux/fuzz", "tpt-kinetix-av1/fuzz", "tpt-kinetix-h264/fuzz", "tpt-kinetix-stream/fuzz"]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
authors = ["TPT Solutions"]
repository = "https://github.com/tpt-solutions/tpt-kinetix"

[workspace.dependencies]
# Parallelism
rayon = "1.10"

# Parsing
nom = "7.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Channels
crossbeam-channel = "0.5"

# Internal crates
tpt-kinetix-core = { path = "tpt-kinetix-core" }
tpt-kinetix-demux = { path = "tpt-kinetix-demux" }
tpt-kinetix-h264 = { path = "tpt-kinetix-h264" }
tpt-kinetix-av1 = { path = "tpt-kinetix-av1" }
tpt-kinetix-mux = { path = "tpt-kinetix-mux" }
tpt-kinetix-pipeline = { path = "tpt-kinetix-pipeline" }
tpt-kinetix-stream = { path = "tpt-kinetix-stream" }

[profile.dev]
opt-level = 1
debug = "line-tables-only"
incremental = true

[profile.test]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package.rav1e]
opt-level = 3

[profile.dev.package.tree-sitter]
opt-level = 3
