[package]
name = "kinetix-av1"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "AV1 decoder and encoder for the TPT Kinetix media processing engine"

[dependencies]
nom = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
kinetix-core = { workspace = true }
