[package]
name = "kinetix-av1"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "AV1 decoder and encoder for the TPT Kinetix media processing engine"
keywords = ["av1", "video", "decoder", "encoder", "rav1e"]
categories = ["multimedia", "parser-implementations"]
readme = "README.md"
documentation = "https://docs.rs/kinetix-av1"

[dependencies]
nom = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
kinetix-core = { workspace = true }
rav1e = { version = "0.7", default-features = false }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.5"

[[bench]]
name = "av1_encode"
harness = false
