[package]
name = "kinetix-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for the TPT Kinetix media processing engine"

[[bin]]
name = "kinetix"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# clap is CLI-only; not shared across library crates
clap = { version = "4.5", features = ["derive"] }
kinetix-core = { workspace = true }
kinetix-pipeline = { workspace = true }
kinetix-stream = { workspace = true }
