[package]
name = "kinetix-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types for the TPT Kinetix media processing engine"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
