[package]
name = "kinetix-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types for the TPT Kinetix media processing engine"
keywords = ["media", "video", "codec", "frame", "packet"]
categories = ["multimedia", "data-structures"]
readme = "README.md"
documentation = "https://docs.rs/kinetix-core"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
