[package]
name = "kinetix-demux"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Container demuxers for the TPT Kinetix media processing engine"

[dependencies]
nom = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
kinetix-core = { workspace = true }
byteorder = "1.5"
