[package]
name = "kinetix-demux"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Container demuxers for the TPT Kinetix media processing engine"
keywords = ["mp4", "demux", "iso-bmff", "video", "parser"]
categories = ["multimedia", "parser-implementations"]
readme = "README.md"
documentation = "https://docs.rs/kinetix-demux"

[dependencies]
nom = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
kinetix-core = { workspace = true }
byteorder = "1.5"

[dev-dependencies]
proptest = "1.5"
