[package]
name = "kinetix-kg"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Knowledge-graph ingestion, analysis, and code generation tooling"
keywords = ["codegen", "knowledge-graph", "codec", "ast", "rayon"]
categories = ["development-tools", "multimedia"]
readme = "README.md"
documentation = "https://docs.rs/kinetix-kg"

[[bin]]
name = "kinetix-kg"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tree-sitter = "0.24"
tree-sitter-c = "0.23"
clap = { version = "4.5", features = ["derive"] }
