[package]
name = "tpt-kinetix-pipeline"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lock-free multi-stage processing pipeline for the TPT Kinetix engine"
keywords = ["pipeline", "video", "parallel", "crossbeam", "media"]
categories = ["multimedia", "concurrency"]
readme = "README.md"
documentation = "https://docs.rs/tpt-kinetix-pipeline"

[dependencies]
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tpt-kinetix-core = { workspace = true }
tpt-kinetix-demux = { workspace = true }
tpt-kinetix-h264 = { workspace = true }
tpt-kinetix-av1 = { workspace = true }

[dev-dependencies]
tpt-kinetix-test-utils = { path = "../tpt-kinetix-test-utils" }
criterion = { workspace = true }

[[bench]]
name = "transcode_throughput"
harness = false
