[package]
name = "tpt-kinetix-av1-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
tpt-kinetix-av1 = { path = ".." }

[[bin]]
name = "fuzz_obu_parse"
path = "fuzz_targets/fuzz_obu_parse.rs"
test = false
doc = false
